--- a/ABCEurekaDiscoveryServer/src/main/resources/application.properties
+++ b/ABCEurekaDiscoveryServer/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 server.port = 8761
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/onlinetestportal
+#
+#spring.datasource.username = root
+#spring.datasource.password =
+#spring.jpa.hibernate.ddl-auto=update
