student attempts created

--- a/ABCEurekaDiscoveryServer/src/main/resources/application.properties
+++ b/ABCEurekaDiscoveryServer/src/main/resources/application.properties
@@ -2,6 +2,8 @@ server.port = 8761
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 
+spring.application.name=mainserver-microservice
+
 #spring.datasource.url=jdbc:mysql://localhost:3306/onlinetestportal
 #
 #spring.datasource.username = root
