--- a/ABCEurekaDiscoveryServer/pom.xml
+++ b/ABCEurekaDiscoveryServer/pom.xml
@@ -61,6 +61,19 @@
 		    <artifactId>graphql-java-tools</artifactId>
 		    <version>5.2.4</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-netflix-hystrix -->
+		<dependency>
+		    <groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+		    <version>2.2.7.RELEASE</version>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-netflix-zuul -->
+		<!-- <dependency>
+		    <groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
+		    <version>2.2.7.RELEASE</version>
+		</dependency> -->
 		
 		
 	</dependencies>
