--- a/ABCEurekaDiscoveryServer/src/main/resources/application.properties
+++ b/ABCEurekaDiscoveryServer/src/main/resources/application.properties
@@ -4,6 +4,10 @@ eureka.client.fetch-registry=false
 
 spring.application.name=mainserver-microservice
 
+#zuul.routes.[admin-microservice].url = http://localhost:8080/	
+#zuul.routes.[student-microservice].url = http://localhost:8081/
+#zuul.routes.[trainer-microservice].url = http://localhost:8082/
+
 #spring.datasource.url=jdbc:mysql://localhost:3306/onlinetestportal
 #
 #spring.datasource.username = root
