--- a/ABCEurekaDiscoveryServer/pom.xml
+++ b/ABCEurekaDiscoveryServer/pom.xml
@@ -79,7 +79,7 @@
 		    <version>2.2.7.RELEASE</version>
 		</dependency> -->
 		
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
@@ -88,7 +88,7 @@
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
-		</dependency>
+		</dependency> -->
 		
 		
 		
