--- a/ABCEurekaDiscoveryServer/pom.xml
+++ b/ABCEurekaDiscoveryServer/pom.xml
@@ -5,7 +5,8 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.5.0</version>
+		<!-- <version>2.5.0</version> -->
+		<version>2.3.12.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.testcreation.eurekaserver</groupId>
@@ -15,7 +16,8 @@
 	<description>Eureka Discovery Server</description>
 	<properties>
 		<java.version>11</java.version>
-		<spring-cloud.version>2020.0.3</spring-cloud.version>
+		<!-- <spring-cloud.version>2020.0.3</spring-cloud.version> -->
+		<spring-cloud.version>Hoxton.SR11</spring-cloud.version>
 	</properties>
 	<dependencies>
 		<!-- <dependency>
@@ -73,11 +75,13 @@
 		    <version>2.2.7.RELEASE</version>
 		</dependency>
 		
-		<!-- <dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-netflix-zuul -->
+		<dependency>
 		    <groupId>org.springframework.cloud</groupId>
 		    <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
 		    <version>2.2.7.RELEASE</version>
-		</dependency> -->
+		</dependency>
+
 		
 		<!-- <dependency>
 			<groupId>org.springframework.boot</groupId>
