--- a/Zuul-Router/src/main/resources/application.properties
+++ b/Zuul-Router/src/main/resources/application.properties
@@ -5,3 +5,9 @@ spring.application.name = zuul-router
 zuul.routes.[admin-port].url = http://localhost:8080
 zuul.routes.[student-port].url = http://localhost:8081
 zuul.routes.[trainer-port].url = http://localhost:8082
+
+spring.datasource.url=jdbc:mysql://localhost:3306/onlinetestportal
+spring.datasource.username=root
+spring.datasource.password=
+
+spring.jpa.hibernate.ddl-auto=update
